# Pico-ASHA

./: .gitignore  CMakeLists.txt  LICENCE  README.md
.github/workflows/: build-fw.yml  build-gui.yml  build.yml  website.yml
doc/: command_protocol.md
gui/: CMakeLists.txt  Main.qml  main.cpp  pairdialog.cpp  pairdialog.h  picoashacomm.cpp  picoashacomm.h  picoashamainwindow.cpp  picoashamainwindow.h  remotedevice.cpp  remotedevice.h  remotedevicemodel.cpp  remotedevicemodel.h
include/: asha_comms.hpp  bt_status_err.hpp
lib/PseudoAtomic/: LICENCE  RP2040Atomic.hpp
lib/g722/: g722_encode.cc  g722_typedefs.h
patch/: tinyusb-v0.18-uac2-fix.patch
scripts/: conv_asha_hci.py
src/: asha-test-tone.hpp  asha.cpp  asha_audio.c  asha_audio.cpp  asha_audio.h  asha_audio.hpp  asha_bt.cpp  asha_bt.hpp  asha_bt_ha.cpp  asha_bt_ha.hpp  asha_common.hpp  asha_comms.cpp  asha_comms.hpp  asha_led.cpp  asha_led.hpp  asha_logging.cpp  asha_logging.h  asha_unique_id.hpp  asha_usb_serial.hpp  asha_uuid.hpp  asha_vers.h  bt_status_err.cpp  bt_status_err.hpp  btstack_ad_dump.c  btstack_config.h  cy43_config_override.h  hearing_aid.cpp  hearing_aid.hpp  main.c  main.cpp  pcm_audio.c  perf_metrics.hpp  perf_test.c  pico_asha.h  pico_bt.cpp  pico_bt.hpp  runtime_settings.cpp  runtime_settings.hpp  tusb_config.h  usb_audio.c  (+8 more)
website/: mkdocs.yml
website/docs/: development.md  download.md  faq.md  guide.md  index.md  status.md
